--- a/asset/css/elementor-post-154-css.css
+++ b/asset/css/elementor-post-154-css.css
@@ -77,7 +77,7 @@ body.rtl .elementor-154 .elementor-element.elementor-element-ddab782 {
 }
 
 .elementor-154 .elementor-element.elementor-element-d604761 .elementor-repeater-item-255ec51 .swiper-slide-bg {
-    background-image: url('../img/cover/cover-depan-2.jpg');
+    background-image: url('../img/cover/cover-depan-2.webp');
     background-size: cover;
 }
 
